--- a/index.html
+++ b/index.html
@@ -3,290 +3,260 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WEBSTUDIO</title>
-
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>WebStudio</title>
   </head>
-
   <body>
-    <div class="container">
-      <!--Header kısmı-->
-      <header class="box-1">
-        <div class="logo1">
-          <a href="zekirovskii.github.io/goit-markup-hw-01/"
-            >WEB<span class="color-logo">STUDIO</span></a
+    <header class="header">
+      <div class="container">
+        <nav class="header-nav">
+          <a class="header-nav-logo logo" href="./index.html"
+            >Web<span class="accent">Studio</span></a
           >
-        </div>
-        <div class="nav">
-          <div class="logo2">
-            <ul class="list1">
-              <li><a href="/">Studio</a></li>
-              <li><a href="/">Portfolio</a></li>
-              <li><a href="/">Contacts</a></li>
-            </ul>
-          </div>
-
-          <nav class="logo3">
-            <address>
-              <p>info@devstudio.com</p>
-              <p>+11 (000) 111-11-11</p>
-            </address>
-          </nav>
-        </div>
-      </header>
-      <!--Header bitiş-->
-
-      <!--Main kısmı-->
-      <main>
-        <!--Butonlu section-->
-        <section>
-          <div class="title">
-            <div class="title-text">
-              <h1>Effective Solutions<br />for Your Business</h1>
-            </div>
-
-            <button type="button" class="hero-button">Order Service</button>
-          </div>
-        </section>
-
-        <!--Sayfada ortada bulunan beyaz kısım-->
-        <section class="white-sec">
-          <div class="white-text">
-            <ul class="emc">
-              <li>
-                <div class="white-1">
-                  <h2>Strategy</h2>
-                  <p>
-                    Our goal is to identify the business problem to walk away
-                    with the perfect and creative solution.
-                  </p>
-                </div>
-              </li>
-              <li>
-                <div class="white-2">
-                  <h2>Punctuality</h2>
-                  <p>
-                    Bring the key message to the brand's audience for the best
-                    price within the shortest possible time.
-                  </p>
-                </div>
-              </li>
-              <li>
-                <div class="white-3">
-                  <h2>Diligence</h2>
-                  <p>
-                    Research and confirm brands that present the strongest
-                    digital growth opportunities and minimize risk.
-                  </p>
-                </div>
-              </li>
-              <li>
-                <div class="white-4">
-                  <h2>Technologies</h2>
-                  <p>
-                    Design practice focused on digital experiences. We bring
-                    forth a deep passion for problem-solving.
-                  </p>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </section>
-
-        <!--Kişi kartlarını bulunduran section-->
-        <section class="card-sec">
-          <div class="container">
-            <h2 class="ourteam">Our Team</h2>
-            <ul>
-              <li>
-                <div class="mark">
-                  <img
-                    src="images/img1.jpg"
-                    alt="Mark Guerrero-Product Designer"
-                    width="264"
-                    height="260"
-                  />
-                  <div class="mark-text">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="tom">
-                  <img
-                    src="images/img2.jpg"
-                    alt="Tom Ford-Fronted Developer"
-                    width="264"
-                    height="260"
-                  />
-                  <div class="tom-text">
-                    <h3>Tom Ford</h3>
-                    <p>Fronted Developer</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="camila">
-                  <img
-                    src="images/img3.jpg"
-                    alt="Camila Garcia-Marketing"
-                    width="264"
-                    height="260"
-                  />
-                  <div class="camila-text">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="daniel">
-                  <img
-                    src="images/img4.jpg"
-                    alt="Daniel Wilson-UI Designer"
-                    width="264"
-                    height="260"
-                  />
-                  <div class="daniel-text">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </section>
-        <!-- Portfolio kısmını bulunduran section-->
-        <section class="portfolio-sec">
-          <div class="container">
-            <h2 class="ourportfolio">Our Portfolio</h2>
-
-            <div class="portfolio-one">
-              <ul>
-                <li>
-                  <div class="portfolio1">
-                    <img
-                      src="./images/port1.jpg"
-                      alt="Banking App"
-                      width="360"
-                      height="300"
-                    />
-                    <div class="portfolio-text1">
-                      <h3>Banking App</h3>
-                      <p>App</p>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="portfolio2">
-                    <img
-                      src="./images/port2.jpg"
-                      alt="Cashless Payment"
-                      width="360"
-                      height="300"
-                    />
-                    <div class="portfolio-text2">
-                      <h3>Cashless Payment</h3>
-                      <p>Marketing</p>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="portfolio3">
-                    <img
-                      src="./images/port3.jpg"
-                      alt="Meditation App"
-                      width="360"
-                      height="300"
-                    />
-                    <div class="portfolio-text3">
-                      <h3>Meditation App</h3>
-                      <p>App</p>
-                    </div>
-                  </div>
-                </li>
-              </ul>
-            </div>
-
-            <div class="portfolio-two">
-              <ul>
-                <li>
-                  <div class="portfolio4">
-                    <img
-                      src="./images/port4.jpg"
-                      alt="Taxi Service"
-                      width="360"
-                      height="300"
-                    />
-                    <div class="portfolio-text4">
-                      <h3>Taxi Service</h3>
-                      <p>Marketing</p>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="portfolio5">
-                    <img
-                      src="./images/port5.jpg"
-                      alt="Screen Illustrations"
-                      width="360"
-                      height="300"
-                    />
-                    <div class="portfolio-text5">
-                      <h3>Screen Illustrations</h3>
-                      <p>Design</p>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="portfolio6">
-                    <img
-                      src="./images/port6.jpg"
-                      alt="Online Courses"
-                      width="360"
-                      height="300"
-                    />
-                    <div class="portfolio-text6">
-                      <h3>Online Courses</h3>
-                      <p>Marketing</p>
-                    </div>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </section>
-      </main>
-      <!--Main Bitiş-->
-      <!--Footer kısmı -->
-      <footer class="ftr">
-        <div class="container">
-          <div class="last-logo">
-            <div class="last-a">
-              <a href="zekirovskii.github.io/goit-markup-hw-01/"
-                >WEB<span class="color-logo">STUDIO</span></a
+          <ul class="header-nav-list">
+            <li class="header-nav-item">
+              <a class="header-nav-link header-link" href="./index.html"
+                >Studio</a
               >
-            </div>
-
-            <p class="last-p">
-              Increase the flow of customers and sales for your business with
-              digital marketing & growth solutions.
-            </p>
-          </div>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link header-link" href="">Portfolio</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link header-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="header-address">
+          <ul class="header-address-list">
+            <li class="header-address-item">
+              <a
+                class="header-address-link header-link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="header-address-item">
+              <a
+                class="header-address-link header-link"
+                href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
+    </header>
+    <main>
+      <section class="hero">
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-button cta" type="button">Order Service</button>
         </div>
-      </footer>
-    </div>
+      </section>
+      <section class="features">
+        <div class="container">
+          <h2 class="visually-hidden">Features</h2>
+          <ul class="features-list">
+            <li class="features-item">
+              <h3 class="features-subtitle">Strategy</h3>
+              <p class="features-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-subtitle">Punctuality</h3>
+              <p class="features-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-subtitle">Diligence</h3>
+              <p class="features-text">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-subtitle">Technologies</h3>
+              <p class="features-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="team">
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                src="./images/taste-img-1.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+                class="team-image"
+              />
+              <div class="team-border">
+                <h3 class="team-subtitle">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/taste-img-2.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+                class="team-image"
+              />
+              <div class="team-border">
+                <h3 class="team-subtitle">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/taste-img-3.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+                class="team-image"
+              />
+              <div class="team-border">
+                <h3 class="team-subtitle">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/taste-img-4.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+                class="team-image"
+              />
+              <div class="team-border">
+                <h3 class="team-subtitle">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="portfolio">
+        <div class="container">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img
+                src="./images/image1.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+                class="portfolio-img"
+              />
+              <div class="portfolio-border">
+                <h3 class="portfolio-subtitle">Banking App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/image2.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+                class="portfolio-img"
+              />
+              <div class="portfolio-border">
+                <h3 class="portfolio-subtitle">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/image3.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+                class="portfolio-img"
+              />
+              <div class="portfolio-border">
+                <h3 class="portfolio-subtitle">Meditation App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/image4.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+                class="portfolio-img"
+              />
+              <div class="portfolio-border">
+                <h3 class="portfolio-subtitle">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/image5.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+                class="portfolio-img"
+              />
+              <div class="portfolio-border">
+                <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/image6.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+                class="portfolio-img"
+              />
+              <div class="portfolio-border">
+                <h3 class="portfolio-subtitle">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <a class="footer-logo logo" href="./index.html"
+          >Web<span class="accent black-white">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
