--- a/index.html
+++ b/index.html
@@ -3,12 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
+    <title>goit-markup-hw-03</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
@@ -16,43 +11,42 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/style.css" />
-    <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header">
       <div class="container">
-        <nav class="header-nav">
-          <a class="header-nav-logo logo" href="./index.html"
-            >Web<span class="accent">Studio</span></a
+        <nav class="nav">
+          <a class="logo" href="./index.html"
+            >WEB<span class="logostudio">Studio</span></a
           >
-          <ul class="header-nav-list">
-            <li class="header-nav-item">
-              <a class="header-nav-link header-link" href="./index.html"
-                >Studio</a
-              >
+          <ul class="nav-list">
+            <li>
+              <a href="./index.html" class="nav-list-item">Studio</a>
             </li>
-            <li class="header-nav-item">
-              <a class="header-nav-link header-link" href="">Portfolio</a>
+            <li>
+              <a href="" class="nav-list-item">Portfolio</a>
             </li>
-            <li class="header-nav-item">
-              <a class="header-nav-link header-link" href="">Contacts</a>
+            <li>
+              <a href="" class="nav-list-item">Contacts</a>
             </li>
           </ul>
         </nav>
-        <address class="header-address">
-          <ul class="header-address-list">
-            <li class="header-address-item">
-              <a
-                class="header-address-link header-link"
-                href="mailto:info@devstudio.com"
+        <address class="client-contact">
+          <ul class="contact-list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="client-contact"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="header-address-item">
-              <a
-                class="header-address-link header-link"
-                href="tel:+110001111111"
+            <li>
+              <a href="tel:+110001111111" class="client-contact"
                 >+11 (000) 111-11-11</a
               >
             </li>
@@ -61,40 +55,40 @@
       </div>
     </header>
     <main>
-      <section class="hero">
+      <section class="section-title">
         <div class="container">
-          <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="hero-button cta" type="button">Order Service</button>
+          <h1 class="title">Effective Solutions for Your Business</h1>
+          <button class="button" type="button">Order Service</button>
         </div>
       </section>
       <section class="features">
         <div class="container">
           <h2 class="visually-hidden">Features</h2>
-          <ul class="features-list">
-            <li class="features-item">
-              <h3 class="features-subtitle">Strategy</h3>
-              <p class="features-text">
+          <ul class="info-list">
+            <li class="info-list-item">
+              <h3 class="info-list-title">Strategy</h3>
+              <p class="info-list-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="features-item">
-              <h3 class="features-subtitle">Punctuality</h3>
-              <p class="features-text">
+            <li class="info-list-item">
+              <h3 class="info-list-title">Punctuality</h3>
+              <p class="info-list-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="features-item">
-              <h3 class="features-subtitle">Diligence</h3>
-              <p class="features-text">
+            <li class="info-list-item">
+              <h3 class="info-list-title">Diligence</h3>
+              <p class="info-list-text">
                 Research and confirm brands with the strongest digital growth
                 opportunities and minimize risk.
               </p>
             </li>
-            <li class="features-item">
-              <h3 class="features-subtitle">Technologies</h3>
-              <p class="features-text">
+            <li class="info-list-item">
+              <h3 class="info-list-title">Technologies</h3>
+              <p class="info-list-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
@@ -102,60 +96,61 @@
           </ul>
         </div>
       </section>
-      <section class="team">
+      <section class="section-team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
-            <li class="team-item">
+            <li class="team-members">
               <img
-                src="./images/taste-img-1.jpg"
-                alt="Mark Guerrero"
+                src="./images/Name-1.jpg"
+                alt="Name-1"
                 width="264"
                 height="260"
-                class="team-image"
               />
-              <div class="team-border">
-                <h3 class="team-subtitle">Mark Guerrero</h3>
-                <p class="team-text">Product Designer</p>
+              <div class="member-name">
+                <h3 class="team-members-title">Mark Guerrero</h3>
+                <p class="team-members-text">Product Designer</p>
               </div>
             </li>
-            <li class="team-item">
+
+            <li class="team-members">
               <img
-                src="./images/taste-img-2.jpg"
-                alt="Tom Ford"
+                src="./images/Name-2.jpg"
+                alt="Name-2"
                 width="264"
                 height="260"
-                class="team-image"
               />
-              <div class="team-border">
-                <h3 class="team-subtitle">Tom Ford</h3>
-                <p class="team-text">Frontend Developer</p>
+              <div class="member-name">
+                <h3 class="team-members-title">Tom Ford</h3>
+                <p class="team-members-text">Frontend Developer</p>
               </div>
             </li>
-            <li class="team-item">
+
+            <li class="team-members">
               <img
-                src="./images/taste-img-3.jpg"
-                alt="Camila Garcia"
+                src="./images/Name-3.jpg"
+                alt="Name-3"
                 width="264"
                 height="260"
-                class="team-image"
               />
-              <div class="team-border">
-                <h3 class="team-subtitle">Camila Garcia</h3>
-                <p class="team-text">Marketing</p>
+
+              <div class="member-name">
+                <h3 class="team-members-title">Camila Garcia</h3>
+                <p class="team-members-text">Marketing</p>
               </div>
             </li>
-            <li class="team-item">
+
+            <li class="team-members">
               <img
-                src="./images/taste-img-4.jpg"
-                alt="Daniel Wilson"
+                src="./images/Name-4.jpg"
+                alt="Name-4"
                 width="264"
                 height="260"
-                class="team-image"
               />
-              <div class="team-border">
-                <h3 class="team-subtitle">Daniel Wilson</h3>
-                <p class="team-text">UI Designer</p>
+
+              <div class="member-name">
+                <h3 class="team-members-title">Daniel Wilson</h3>
+                <p class="team-members-text">UI Designer</p>
               </div>
             </li>
           </ul>
@@ -163,84 +158,80 @@
       </section>
       <section class="portfolio">
         <div class="container">
-          <h2 class="portfolio-title">Our Portfolio</h2>
-          <ul class="portfolio-list">
+          <h2 class="title-portfolio">Our Portfolio</h2>
+          <ul class="portfolio-card">
             <li class="portfolio-item">
               <img
-                src="./images/image1.jpg"
-                alt="Banking App"
+                src="./images/Banking-App-min.jpg"
+                alt="Banking-App-min"
                 width="360"
                 height="300"
-                class="portfolio-img"
               />
-              <div class="portfolio-border">
-                <h3 class="portfolio-subtitle">Banking App</h3>
-                <p class="portfolio-text">App</p>
+              <div class="portfolio-list">
+                <h3 class="portfolio-card-title">Banking App</h3>
+                <p class="portfolio-card-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
               <img
-                src="./images/image2.jpg"
-                alt="Cashless Payment"
+                src="./images/Cashless-min.jpg"
+                alt="Cashless"
                 width="360"
                 height="300"
-                class="portfolio-img"
               />
-              <div class="portfolio-border">
-                <h3 class="portfolio-subtitle">Cashless Payment</h3>
-                <p class="portfolio-text">Marketing</p>
+              <div class="portfolio-list">
+                <h3 class="portfolio-card-title">Cashless Payment</h3>
+                <p class="portfolio-card-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
               <img
-                src="./images/image3.jpg"
-                alt="Meditation App"
+                src="./images/Meditation-min.jpg"
+                alt="Meditation-app"
                 width="360"
                 height="300"
-                class="portfolio-img"
               />
-              <div class="portfolio-border">
-                <h3 class="portfolio-subtitle">Meditation App</h3>
-                <p class="portfolio-text">App</p>
+              <div class="portfolio-list">
+                <h3 class="portfolio-card-title">Meditation App</h3>
+                <p class="portfolio-card-text">App</p>
+              </div>
+            </li>
+
+            <li class="portfolio-item">
+              <img
+                src="./images/Taxi-serv-min.jpg"
+                alt="Taxi-serv"
+                width="360"
+                height="300"
+              />
+
+              <div class="portfolio-list">
+                <h3 class="portfolio-card-title">Taxi Service</h3>
+                <p class="portfolio-card-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
               <img
-                src="./images/image4.jpg"
-                alt="Taxi Service"
+                src="./images/screen-min.jpg"
+                alt="screen-illustration"
                 width="360"
                 height="300"
-                class="portfolio-img"
               />
-              <div class="portfolio-border">
-                <h3 class="portfolio-subtitle">Taxi Service</h3>
-                <p class="portfolio-text">Marketing</p>
+              <div class="portfolio-list">
+                <h3 class="portfolio-card-title">Screen Illustrations</h3>
+                <p class="portfolio-card-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
               <img
-                src="./images/image5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-                class="portfolio-img"
-              />
-              <div class="portfolio-border">
-                <h3 class="portfolio-subtitle">Screen Illustrations</h3>
-                <p class="portfolio-text">Design</p>
-              </div>
-            </li>
-            <li class="portfolio-item">
-              <img
-                src="./images/image6.jpg"
+                src="./images/Online.jpg"
                 alt="Online Courses"
                 width="360"
                 height="300"
-                class="portfolio-img"
               />
-              <div class="portfolio-border">
-                <h3 class="portfolio-subtitle">Online Courses</h3>
-                <p class="portfolio-text">Marketing</p>
+              <div class="portfolio-list">
+                <h3 class="portfolio-card-title">Online Courses</h3>
+                <p class="portfolio-card-text">Marketing</p>
               </div>
             </li>
           </ul>
@@ -249,8 +240,8 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="footer-logo logo" href="./index.html"
-          >Web<span class="accent black-white">Studio</span></a
+        <a class="logo-footer" href="./index.html"
+          >WEB<span class="footer-logostudio">Studio</span></a
         >
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
